--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>monochrome_APL</title>
   <meta charset="utf-8">
   <link href="css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poiret+One&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
   <svg style="display: none;">
@@ -96,17 +95,17 @@
       <div class="social">
         <a href="#" class="social__item social__item--vk">vk
           <svg width="50" height="50">
-            <use xlink:href="#social__vk-icon"></use>
+            <use xlink:href="sprite.svg#social__vk-icon"></use>
           </svg>
         </a>
         <a href="#" class="social__item social__item--inst">inst
           <svg width="50" height="50">
-            <use xlink:href="#social__inst-icon"></use>
+            <use xlink:href="sprite.svg#social__inst-icon"></use>
           </svg>
         </a>
         <a href="#" class="social__item social__item--fb">fb
           <svg width="50" height="50">
-            <use xlink:href="#social__fb-icon"></use>
+            <use xlink:href="sprite.svg#social__fb-icon"></use>
           </svg>
         </a>
       </div>
