--- a/works.html
+++ b/works.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <title>monochrome_APL Works</title>
+  <meta charset="utf-8">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-
+  <header class="page-header">
+    <div class="container container--header">
+      <div class="logo logo--header">monochrome APL</div>
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a href=index.html class="main-nav__link">Home</a></li>
+          <li class="main-nav__item"><a href="works.html" class="main-nav__link">Works</a></li>
+          <li class="main-nav__item"><a href="#" class="main-nav__link">Price&Terms</a></li>
+          <li class="main-nav__item"><a href="#" class="main-nav__link">Contacts</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main></main>
+  <footer class="page-footer">
+    <div class="container container--footer">
+      <div class="social">
+        <a href="#" class="social__item social__item--vk">vk
+          <svg width="50" height="50">
+            <use xlink:href="sprite.svg#social__vk-icon"></use>
+          </svg>
+        </a>
+        <a href="#" class="social__item social__item--inst">inst
+          <svg width="50" height="50">
+            <use xlink:href="sprite.svg#social__inst-icon"></use>
+          </svg>
+        </a>
+        <a href="#" class="social__item social__item--fb">fb
+          <svg width="50" height="50">
+            <use xlink:href="sprite.svg#social__fb-icon"></use>
+          </svg>
+        </a>
+      </div>
+      <a class="copyright" href="http://linadorasheva.ru/" target="_blank">by linadorasheva with <span class="copyright__heart">&#9829;</span> | 2018 &#169;</a>
+    </div>
+  </footer>
 </body>
 </html>
