подключены скрипты, добавлен тип к бтн

--- a/works.html
+++ b/works.html
@@ -17,7 +17,7 @@
           <li class="main-nav__item"><a href="#" class="main-nav__link">Contacts</a></li>
         </ul>
       </nav>
-      <button class="btn">Открыть</button>
+      <button class="btn" type="button">Открыть</button>
     </div>
   </header>
   <main>
@@ -138,11 +138,12 @@
     </div>
   </footer>
   <div class="overlay hidden">
-    <button class="btn btn--overlay-close">x</button>
+    <button class="btn btn--overlay-close" type="button" tabindex="0">x</button>
     <div class="overlay__preview">
       <img class="overlay__image" src="" alt="">
     </div>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script_nav.js"></script>
+  <script src="js/script_overlay.js"></script>
 </body>
 </html>
