добавлен скрипт реверса темы

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <title>monochrome_APL</title>
+  <title>monochrome_PhotoLab</title>
   <meta charset="utf-8">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="body body--index">
   <header class="page-header">
     <div class="container container--header">
-      <a class="logo logo--header" href="index.html">monochrome APL</a>
+      <a class="logo" href="index.html">monochrome APL</a>
       <nav class="main-nav">
         <ul class="main-nav__list">
           <li class="main-nav__item"><a href="index.html" class="main-nav__link">Home</a></li>
@@ -27,7 +27,7 @@
           <h1 class="descript__title">Monochrome</h1>
           <span class="descript__text">author's photo lab</span>
         </div>
-        <a class="descript__btn" href="works.html"><span class="descript__btn-text">reverse</span></a>
+        <button class="descript__btn" type="button"><span class="descript__btn-text">reverse</span></button>
       </section>
       <section class="bg">
       </section>
@@ -56,5 +56,6 @@
     </div>
   </footer>
   <script src="js/script_nav.js"></script>
+  <script src="js/script_reverse.js"></script>
 </body>
 </html>
