убирает соц-иконки из разметки и ставит их фоном

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     <div class="container container--footer">
       <div class="social">
         <a href="#" class="social__item social__item--vk">vk
-          <svg width="50" height="50">
+          <!-- <svg width="50" height="50">
             <use xlink:href="sprite.svg#social__vk-icon"></use>
-          </svg>
+          </svg> -->
         </a>
         <a href="#" class="social__item social__item--inst">inst
-          <svg width="50" height="50">
+          <!-- <svg width="50" height="50">
             <use xlink:href="sprite.svg#social__inst-icon"></use>
-          </svg>
+          </svg> -->
         </a>
         <a href="#" class="social__item social__item--fb">fb
-          <svg width="50" height="50">
+          <!-- <svg width="50" height="50">
             <use xlink:href="sprite.svg#social__fb-icon"></use>
-          </svg>
+          </svg> -->
         </a>
       </div>
       <a class="copyright" href="http://linadorasheva.ru/" target="_blank">by linadorasheva with <span class="copyright__heart">&#9829;</span> | 2018 &#169;</a>
